# google-ai-shopping-assistant

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run_semgrep.bat  semgrep-rules.yaml  threat_model.md
secure_agent_lab/: __init__.py
shopping-assistant/: .pre-commit-config.yaml  README.md  agents-cli-manifest.yaml  pyproject.toml
shopping-assistant/.agents/: hooks.json
shopping-assistant/.agents/scripts/: validate_tool_call.py
shopping-assistant/.semgrep/: rules.yaml
shopping-assistant/app/: agent.py
shopping-assistant/tests/: test_agent.py
shopping-assistant/tests/unit/: test_checkout.py
