[project]
name = "secure-agent-lab"
version = "0.1.0"
description = "Secure Agent Lab with shopping-assistant"
dependencies = [
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "opentelemetry-instrumentation-google-genai>=0.1.0,<1.0.0",
    "gcsfs>=2024.11.0",
    "google-cloud-logging>=3.12.0,<4.0.0",
    "google-cloud-aiplatform[evaluation,agent-engines]>=1.156.0",
    "protobuf>=6.31.1,<7.0.0",
    "fastapi",
    "uvicorn",
    "pre-commit>=3.5.0",
    "pre-commit-hooks>=4.5.0",
    "semgrep>=1.65.0",
]
requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shopping-assistant"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
